# Expert_Guide

./: config.py  debug_search_tool.py  pyproject.toml  requirements.txt  simple_working_coordinator.py  telegram_bot.py  telegram_config.py  working_chat.py
agents/: __init__.py  educational_assistant.py
db_setup/: comprehensive_dummy_data_seeder.py  debug_database.py  example_usage.py  setup_verification.py  verify_database_data.py
tools/: __init__.py  comprehensive_search_tool.py  course_search_tool.py  database_query_tool.py  resource_search_tool.py  task_search_tool.py
